fix(update-person-terms): update user attributes when setting terms #NP-48236